# RM2026

./: ..CMakeLists.txt  .gitignore  .gitmodules  README.md  build_and_run.sh  environment_setup.bash
auto_aim/: CMakeLists.txt  package.xml
auto_aim/config/: camera.yaml
auto_aim/config/infantry/: detector.yaml  tracker.yaml
auto_aim/config/quan_xiang/: detector.yaml  tracker.yaml
auto_aim/config/sentry/: detector.yaml  tracker.yaml
auto_aim/launch/: auto_aim.py  auto_aim_launch.py
camera_test/: CMakeLists.txt  README.md  launch_camera_test.sh  package.xml
camera_test/include/camera_test/: camera_viewer.hpp
camera_test/launch/: camera_test_launch.py
camera_test/src/: camera_test_node.cpp  camera_viewer.cpp
video_player/: CMakeLists.txt  README.md  package.xml  test_video_player.sh
video_player/config/: video_player_params.yaml
video_player/include/video_player/: video_player.h
video_player/launch/: video_player.launch.py
video_player/src/: video_player.cpp  video_player_node.cpp
